<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <EditText
            android:id="@+id/et_team_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/team_name"
            android:maxLength="15"
            android:inputType="text"
            android:layout_marginBottom="5dp"/>

        <EditText
            android:id="@+id/et_slogan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_slogan"
            android:maxLength="25"
            android:inputType="text"
            android:layout_marginBottom="5dp"/>

        <EditText
            android:id="@+id/et_wins"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_wins"
            android:inputType="number"
            android:layout_marginBottom="5dp"
            android:maxLength="2"/>

        <EditText
            android:id="@+id/et_loses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_loses"
            android:inputType="number"
            android:layout_marginBottom="5dp"
            android:maxLength="2"/>

        <EditText
            android:id="@+id/et_draws"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_draws"
            android:inputType="number"
            android:layout_marginBottom="5dp"
            android:maxLength="2"/>

        <EditText
            android:id="@+id/et_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_descriptions"
            android:inputType="textLongMessage"
            android:maxLength="200"/>

    </LinearLayout>
</androidx.cardview.widget.CardView>