<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.TeamUpdateActivity"
    android:padding="10dp">

    <EditText
        android:id="@+id/et_team_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/team_name"
        android:inputType="text"
        android:maxLength="15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="5dp"/>

    <EditText
        android:id="@+id/et_slogan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_slogan"
        android:inputType="text"
        android:maxLength="25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_team_name"
        android:layout_marginBottom="5dp"/>

    <EditText
        android:id="@+id/et_wins"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_wins"
        android:inputType="number"
        android:maxLength="2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_slogan" />

    <EditText
        android:id="@+id/et_loses"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_loses"
        android:inputType="number"
        android:maxLength="2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_wins" />

    <EditText
        android:id="@+id/et_draws"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_draws"
        android:inputType="number"
        android:maxLength="2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_loses" />

    <EditText
        android:id="@+id/et_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_descriptions"
        android:inputType="textLongMessage"
        android:maxLength="200"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_draws" />

    <Button
        android:id="@+id/btn_update_team"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="144dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_description"
        android:text="@string/update"/>
</androidx.constraintlayout.widget.ConstraintLayout>