<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/tv_nickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/nick"
        android:textAlignment="center"
        android:layout_marginBottom="5dp"/>

    <TextView
        android:id="@+id/tv_fullname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fullname"
        android:textAlignment="center"
        android:textSize="18sp"
        android:layout_marginBottom="5dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_player_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:layout_weight="0.7"/>

        <TextView
            android:id="@+id/tv_games"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/games"
            android:layout_weight="0.3"
            android:layout_marginStart="5dp"/>
    </LinearLayout>

</LinearLayout>