<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/tv_team_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/team_name"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_marginBottom="5dp"/>

    <TextView
        android:id="@+id/slogan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/slogan"
        android:textAlignment="center"
        android:textSize="17sp"
        android:layout_marginBottom="5dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hide_bottom_view_on_scroll_behavior"
            android:textSize="16sp"
            android:layout_weight="0.7"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="5dp"
            android:layout_weight="0.3">

            <TextView
                android:id="@+id/tv_wins"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wins"
                android:layout_marginBottom="5dp"/>

            <TextView
                android:id="@+id/tv_loses"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/loses"
                android:layout_marginBottom="5dp"/>

            <TextView
                android:id="@+id/tv_draws"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/draws"
                android:layout_marginBottom="5dp"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>