<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <EditText
            android:id="@+id/et_player_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fullname"
            android:maxLength="30"
            android:inputType="text"
            android:layout_marginBottom="5dp"/>

        <EditText
            android:id="@+id/et_nickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nick"
            android:maxLength="20"
            android:inputType="text"
            android:layout_marginBottom="5dp"/>

        <EditText
            android:id="@+id/et_games"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_games"
            android:maxLength="100"
            android:inputType="text"
            android:layout_marginBottom="5dp"/>

        <EditText
            android:id="@+id/et_player_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_player_description"
            android:maxLength="200"
            android:inputType="text"
            android:layout_marginBottom="5dp"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>