<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.PlayerUpdateActivity"
    android:padding="10dp">

    <EditText
        android:id="@+id/et_player_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/fullname"
        android:inputType="text"
        android:maxLength="30"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="5dp"/>

    <EditText
        android:id="@+id/et_nickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nick"
        android:inputType="text"
        android:maxLength="20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_player_name"
        android:layout_marginBottom="5dp"/>

    <EditText
        android:id="@+id/et_games"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_games"
        android:inputType="text"
        android:maxLength="100"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_nickname"
        android:layout_marginBottom="5dp"/>

    <EditText
        android:id="@+id/et_player_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_player_description"
        android:inputType="text"
        android:maxLength="200"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_games" />

    <Button
        android:id="@+id/btn_update_player"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="116dp"
        android:text="@string/update"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_player_description" />

</androidx.constraintlayout.widget.ConstraintLayout>